--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ repositories {
 }
 
 dependencies {
+    // Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // MySQL
